--- a/presentation_09_07/presentation_09_07.bib
+++ b/presentation_09_07/presentation_09_07.bib
@@ -30,3 +30,13 @@
 	pages = {31--40},
 	file = {Green et al. - 2007 - Provenance semirings.pdf:/home/paul/Zotero/storage/G7UMH7EP/Green et al. - 2007 - Provenance semirings.pdf:application/pdf},
 }
+
+@misc{wu2020integerquantizationdeeplearning,
+      title={Integer Quantization for Deep Learning Inference: Principles and Empirical Evaluation}, 
+      author={Hao Wu and Patrick Judd and Xiaojie Zhang and Mikhail Isaev and Paulius Micikevicius},
+      year={2020},
+      eprint={2004.09602},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2004.09602}, 
+}
